--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html{
 body{
     background-color: var(--bg-color);
     color: var(--text-color);
+    width: 100%;
 }
 
 .header-container {
@@ -130,16 +131,25 @@ span {
 }
 
 .home-img {
-    border: 0.5rem solid var(--main-color);
-    border-radius: 51%;
+    /* border: 0.5rem solid var(--main-color); */
+    border-radius: 50%;
 }
 
 .home-img  img{
     position: relative;
-    width: 32vw;
+    /* width: 32vw; */
     border-radius: 50%;
     box-shadow: 0 0 25px rgba(--main-color);
     cursor: pointer;
+}
+
+.personal-img {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 0.5rem solid var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
 }
 
 .home-content p{
@@ -675,7 +685,7 @@ span {
     color: white;
 }
 
-@media(max-width: 1200px){
+@media(max-width: 1024px){
     html{
         font-size: 55%;
     }
@@ -684,8 +694,14 @@ span {
         grid-template-columns: repeat(1,1fr);
         margin: 0 5rem;
     }
+    .skills-bars {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        margin: 0;
+    }
+
 }
-@media(max-width: 1000px){
+@media(max-width: 768px){
     header{
         padding: 2rem 3%;
     }
@@ -698,11 +714,25 @@ span {
     .footer{
         padding: 2rem 3%;
     }
+    .skills-bars{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        margin-top: 10rem;
+    }
+    .text-animation span::before{
+        font-size: 3rem;
+    }
+
+    .home-content h3:nth-of-type(2){
+        font-size: 3rem;
+    }
 }
-@media(max-width: 955px){
+
+@media(max-width: 425px){
     #menu-icon{
         display: block;
     }
+    
     .navbar{
         position: absolute;
         top: 100%;
@@ -734,9 +764,22 @@ span {
     .home-content h1{
         font-size: 5rem;
     }
+
+    .home-img {
+        border-radius: 50%;
+    }
+    .text-animation span::before{
+        font-size: 2rem;
+    }
+
+    .home-content h3:nth-of-type(2){
+        font-size: 2rem;
+    }
+
     .home-img img{
-        width: 70vw;
-        margin-top: 4rem;
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
     }
     .services h2{
         margin-bottom: 3rem;
@@ -755,7 +798,111 @@ span {
     .timeline-item:nth-child(odd){
         padding-left: 37px;
     }
-    .timeline-dot{
+    .timeline-date{
+        position: absolute;
+        left: calc(50% - 135px);
+    }
+    .skills-bars{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        margin-top: 10rem;
+    }
+}
+@media(max-width: 320px){
+    #menu-icon{
+        display: block;
+    }
+    
+    .navbar-container{
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 40%;
+        border-left: 3px solid var(--main-color);
+        border-bottom: 3px solid var(--main-color);
+        broder-bottom0left-radius: 2em;
+        padding: 1rem 3%;
+        baclground: var(--second-bg-color);
+        border-top: 0.1rem solid rgb(0, 0, 0, 0.1);
+        display: none;
+    }
+    .navbar-container .active{
+        display: block;
+    }
+    .navbar-container a{
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+    }
+    .home{
+        flex-direction: column;
+        margin: 5rem 4rem;
+    }
+    .home-content h3{
+        font-size: 2.6rem;
+    }
+    .home-content h1{
+        font-size: 5rem;
+    }
+
+    .home-img {
+        border-radius: 50%;
+    }
+    .text-animation span::before{
+        font-size: 2rem;
+    }
+
+    .home-content h3:nth-of-type(2){
+        font-size: 2rem;
+    }
+
+    .home-img img{
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+    }
+    .services h2{
+        margin-bottom: 3rem;
+    }
+    .projects h2{
+        margin-bottom: 3rem;
+    }
+    .timeline-items::before{
         left: 0;
+    }
+    .timeline-item:nth-child(odd){
+        padding: 0;
+        text-align: center;
+    }
+    .timeline-item:nth-child(even),
+    .timeline-item:nth-child(odd){
+        padding-left: 37px;
+    }
+    .timeline-date{
+        position: absolute;
+        left: calc(50% - 135px);
+        font-size: 1rem;
+        margin-top: -5px
+    }
+    .timeline-dot {
+        height: 21px;
+        width: 21px;
+        background-color: var(--main-color);
+        position: absolute;
+        left: calc(50% - 135px);
+        border-radius: 50%;
+        top: 10px;
+    }
+    .skills-bars{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        margin-top: 10rem;
+    }
+    .projects-box {
+        height: ;
+    }
+
+    .heading{
+        font-size: 3rem;
     }
 }
