Your commit message here

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     --bg-color: #0F0F0F;
     --second-bg-color: #3b3b3b;
     --text-color: white;
-    --main-color: #29ffc2;
+    --main-color: #1c8a6a;
 }
 
 html{
