--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,19 @@
 }
 
 :root{
-    --bg-color: #0F0F0F;
-    --second-bg-color: #3b3b3b;
-    --text-color: white;
-    --main-color: #9e001a;
-    /* --main-color: #29FFC2; */
+    --bg-color: #1D1E27;
+    --second-bg-color: #484E53;
+    --text-color: #EdF2F4;
+    --main-color: #7d1e29;
+    --navbar-bg-color: black;
+}
+
+.light-theme {
+    --bg-color: #EdF2F4;
+    --second-bg-color: #a6a6a6;
+    --text-color: #1D1E27;
+    --main-color: #7a0216;
+    --navbar-bg-color: white;
 }
 
 html{
@@ -35,17 +43,17 @@ body{
     left: 0;
     width: 100%;
     padding: 3rem 9%;
-    background: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(10px);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     z-index: 1000;
+    background: #00000099;
 }
 
 .logo {
     font-size: 3rem;
-    font-weight: 800;
+    font-weight: 900;
     color: var(--text-color);
     cursor: pointer;
     trasition: 0.3s ease;
@@ -62,11 +70,12 @@ body{
     height: 4rem;
 }
 
+
 .navbar-container {
     font-size: 1.8rem;
     color: var(--text-color);
     margin-left: 4rem;
-    font-weight: 500;
+    font-weight: 100;
     trasition: 0.3s ease;
     border-bottom: 3px solid transparent;
     display: flex;
@@ -77,7 +86,7 @@ body{
     font-size: 1.8rem;
     color: var(--text-color);
     margin-leftt: 4rem;
-    font-weight: 500;
+    font-weight: 600;
     trasition: 0.3s ease;
     border-bottom: 3px solid transparent;
 }
@@ -132,13 +141,11 @@ span {
 }
 
 .home-img {
-    /* border: 0.5rem solid var(--main-color); */
     border-radius: 50%;
 }
 
 .home-img  img{
     position: relative;
-    /* width: 32vw; */
     border-radius: 50%;
     box-shadow: 0 0 25px rgba(--main-color);
     cursor: pointer;
@@ -394,7 +401,7 @@ span {
     flex-direction: column;
     text-align: center;
     padding: 0 4rem;
-    background: rgba(2, 0, 0, 0.8);
+    background: rgba(75, 78, 83, 0.8);
     cursor: pointer;
     transition: 0.5s ease;
 }
@@ -550,7 +557,7 @@ span {
 .timeline-date {
     font-size: 12px;
     font-weight: 800;
-    color: white;
+    color: var(--text-color);
     margin: 6px 0 15px;
 }
 
@@ -686,9 +693,24 @@ span {
     color: white;
 }
 
-@media(max-width: 1024px){
+/* <--------- Media Queries ------------> */
+
+@media screen and (min-width: 2560px){
     html{
-        font-size: 55%;
+        font-size: 70%;
+    }
+    section{
+        padding: 10rem 9%;
+        min-height: 50vh;
+    }
+    .home-content p {
+        font-size: 3rem;
+        font-weight: 700;
+    }
+    .timeline-section {
+        min-height: 50vh;
+        padding: 100px 15px;
+        background: var(--bg-color);
     }
     .projects-container {
         padding-bottom: 7rem;
@@ -696,9 +718,18 @@ span {
         margin: 0 5rem;
     }
     .skills-bars {
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
         margin: 0;
+    }
+    .skills {
+        margin: 0 auto;
+        min-height: 30vh;
+    }
+    .text-animation span::before{
+        font-size: 6rem;
+    }
+
+    .home-content h3:nth-of-type(2){
+        font-size: 6rem;
     }
 
 }
@@ -729,12 +760,12 @@ span {
     }
 }
 
-@media(max-width: 425px){
+@media screen and (max-width: 425px){
     #menu-icon{
         display: block;
     }
     
-    .navbar{
+    .navbar-container{
         position: absolute;
         top: 100%;
         right: 0;
@@ -747,10 +778,10 @@ span {
         border-top: 0.1rem solid rgb(0, 0, 0, 0.1);
         display: none;
     }
-    .navbar .active{
+    .navbar-container .active{
         display: block;
     }
-    .navbar a{
+    .navbar-container a{
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
@@ -776,6 +807,18 @@ span {
     .home-content h3:nth-of-type(2){
         font-size: 2rem;
     }
+    .projects-info p {
+        font-size: 1rem;
+        margin: 0.3rem 0 1rem;
+        font-weight: 300;
+        color: white;
+    }
+
+    .projects-container {
+        padding-bottom: 7rem;
+        grid-template-columns: repeat(1,3fr);
+        margin: 0 5rem;
+    }
 
     .home-img img{
         width: 300px;
@@ -785,11 +828,9 @@ span {
     .services h2{
         margin-bottom: 3rem;
     }
-    .projects h2{
-        margin-bottom: 3rem;
-    }
+  
     .timeline-items::before{
-        left: 57px;
+        left: 0;
     }
     .timeline-item:nth-child(odd){
         padding: 0;
@@ -801,15 +842,33 @@ span {
     }
     .timeline-date{
         position: absolute;
-        left: calc(50% - 135px);
+        left: calc(50% - 190px);
+        font-size: 1rem;
+        margin-top: -5px
+    }
+    .timeline-dot {
+        height: 21px;
+        width: 21px;
+        background-color: var(--main-color);
+        position: absolute;
+        left: calc(50% - 190px);
+        border-radius: 50%;
+        top: 10px;
     }
     .skills-bars{
         display: grid;
         grid-template-columns: repeat(3,1fr);
         margin-top: 10rem;
     }
+    .projects-box {
+        height: 100%;
+    }
+
+    .heading{
+        font-size: 3rem;
+    }
 }
-@media(max-width: 320px){
+@media screen and (max-width: 375px){
     #menu-icon{
         display: block;
     }
@@ -881,7 +940,7 @@ span {
     }
     .timeline-date{
         position: absolute;
-        left: calc(50% - 135px);
+        left: calc(50% - 162px);
         font-size: 1rem;
         margin-top: -5px
     }
@@ -890,20 +949,55 @@ span {
         width: 21px;
         background-color: var(--main-color);
         position: absolute;
-        left: calc(50% - 135px);
+        left: calc(50% - 162px);
         border-radius: 50%;
         top: 10px;
     }
-    .skills-bars{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        margin-top: 10rem;
-    }
-    .projects-box {
-        height: ;
-    }
-
+    
     .heading{
         font-size: 3rem;
     }
 }
+@media screen and (max-width: 480px){
+    #menu-icon{
+        display: block;
+    }
+
+    .home-img img {
+        position: relative;
+        border-radius: 50%;
+        box-shadow: 0 0 25px rgba(--main-color);
+        margin-top: 2rem;
+    }
+      .navbar-container{
+        position: absolute;
+        top: 100%;
+        right: 0px;
+        width: 40%;
+        border-left: 3px solid var(--main-color);
+        border-bottom: 3px solid var(--main-color);
+        broder-bottom0left-radius: 2em;
+        padding: 1rem 3%;
+        baclground: var(--second-bg-color);
+        border-top: 0.1rem solid rgb(0, 0, 0, 0.1);
+        display: none;
+        justify-content: space-between;
+    }
+    .navbar-container .active{
+        display: block;
+    }
+
+    .home {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .projects-container {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        align-items: center;
+        gap: 2.5rem;
+    }
+    
+}
+
